# tunify

./: .gitignore  README.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose-local.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3c8d35c487b5_init_db.py  a12c82b440c3_add_admin_moderation_fields_to_playlists.py  ca95020e6813_init_tables.py
backend/app/: main.py
backend/app/api/v1/: albums.py  artists.py  auth.py  likes.py  playlists.py  tracks.py  users.py
backend/app/api/v1/admin/: analytics.py  playlists.py
backend/app/core/: config.py  dependencies.py  handler.py  initial_data.py  providers.py  security.py
backend/app/core/exceptions/: base_exception.py  domain_exception.py
backend/app/db/: base.py  session.py
backend/app/db/models/: album.py  artist.py  like.py  playlist.py  playlist_track.py  refresh_token.py  track.py  user.py
backend/app/domain/validators/: password_validator.py
backend/app/dtos/: custom_response_dto.py
backend/app/repositories/: artist_repository.py  auth_repository.py  base_repository.py  playlist_repository.py  user_repository.py  user_repository_deprecated.py
backend/app/schemas/: artist.py  auth.py  playlist_schema.py  user_schema.py
backend/app/services/: artist_service.py  auth_services.py  playlist_service.py  playlist_services.py  user_services.py
backend/app/utils/: response.py
backend/scripts/: create_admin.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
genai/: README.md
(+10 files in other folders)
